@@ -1,3 +1,9 @@
+2009-03-25  Jan Urbanski  <jurbanski@flumotion.com>
+
+	* flumotion/admin/command/component.py:
+	Further fix flumotion-command, after the fallout in r7224.
+	See also r7691.
+
 2009-03-25  Xavier Queralt Mateu  <xqueralt@flumotion.com>
 
 	* flumotion/admin/gtk/configurationassistant.py:
